--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 Hello, Provereno!
 <input id="code" />
 <button onclick="check_code()">Check code</button>
+<button onclick="post_data()">Post data</button>
 <script>
 function check_code() {
    var code = document.getElementById('code').value
    provereno.check_code({ code: code }, function(result) {
-         console.log(result)
-	// result.data.token - используется для отправки формы данных выигрывших пользователей
+	var data = result.data;
+	alert (JSON.stringify(result.data));
+	if (data['token']) token = data['token']
+   });
 
-});
+}
+function post_data() {
+  var userdata = { name: "Тимур", tel: "9172278848", email: "timurkin@mail.ru" };
+  provereno.post_user_data({ token: token, userdata: JSON.stringify(userdata)}, function(result) {
+
+	alert (JSON.stringify(result.data));
+
+   });
 
 }
 </script>
